--- a/floating.labels.css
+++ b/floating.labels.css
@@ -10,7 +10,7 @@
 .floating-label-on {
     font-size: 0.75rem;
     color: #007bff;
-    transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -120%, 0);
     -webkit-transition: all 200ms ease;
     -moz-transition: all 200ms ease;
     -ms-transition: all 200ms ease;
@@ -20,27 +20,26 @@
 
 .floating-input {
     transition: border-bottom 100ms ease;
-    box-shadow: none;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    outline: none;
-    border: none;
-    border-bottom: 1px solid #E5E6E7;
-    -webkit-border-radius: unset;
-    -moz-border-radius: unset;
-    border-radius: unset;
+    box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    outline: none !important;
+    border: none !important;
+    border-bottom: 1px solid #E5E6E7 !important;
+    -webkit-border-radius: unset !important;
+    -moz-border-radius: unset !important;
+    border-radius: unset !important;
 }
 
 .floating-input:focus {
-    box-shadow: none;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    outline: none;
-    border: none;
-    border-bottom: 1px solid #007bff;
+    box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    outline: none !important;
+    border: none !important;
+    border-bottom: 1px solid #007bff !important;
 }
-
