--- a/floating.labels.css
+++ b/floating.labels.css
@@ -1,5 +1,5 @@
 .floating-label {
-    color: #d1d4d6;
+    opacity: 0.7;
     -webkit-transition: all 200ms ease;
     -moz-transition: all 200ms ease;
     -ms-transition: all 200ms ease;
@@ -9,13 +9,45 @@
 
 .floating-label-on {
     font-size: 0.75rem;
-    color: #007bff;
-    transform: translate3d(0, -120%, 0);
+    opacity: 1;
+    transform: translate3d(0, -100%, 0);
     -webkit-transition: all 200ms ease;
     -moz-transition: all 200ms ease;
     -ms-transition: all 200ms ease;
     -o-transition: all 200ms ease;
     transition: all 200ms ease;
+}
+
+.floating-label-primary {
+    color: #007bff;
+}
+
+.floating-label-secondary {
+    color: #383d41;
+}
+
+.floating-label-success {
+    color: #155724;
+}
+
+.floating-label-danger {
+    color: #721c24;
+}
+
+.floating-label-warning {
+    color: #856404;
+}
+
+.floating-label-info {
+    color: #0c5460;
+}
+
+.floating-label-light {
+    color: #818182;
+}
+
+.floating-label-dark {
+    color: #1b1e21;
 }
 
 .floating-input {
@@ -27,10 +59,10 @@
     -moz-appearance: none !important;
     outline: none !important;
     border: none !important;
-    border-bottom: 1px solid #E5E6E7 !important;
     -webkit-border-radius: unset !important;
     -moz-border-radius: unset !important;
     border-radius: unset !important;
+    border-bottom: 1px solid #E5E6E7 !important;
 }
 
 .floating-input:focus {
@@ -41,5 +73,36 @@
     -moz-appearance: none !important;
     outline: none !important;
     border: none !important;
+}
+
+.floating-input-primary:focus{
     border-bottom: 1px solid #007bff !important;
+}
+
+.floating-input-secondary:focus{
+    border-bottom: 1px solid #383d41 !important;
+}
+
+.floating-input-success:focus{
+    border-bottom: 1px solid #155724 !important;
+}
+
+.floating-input-danger:focus{
+    border-bottom: 1px solid #721c24 !important;
+}
+
+.floating-input-warning:focus{
+    border-bottom: 1px solid #856404 !important;
+}
+
+.floating-input-info:focus{
+    border-bottom: 1px solid #0c5460 !important;
+}
+
+.floating-input-light:focus{
+    border-bottom: 1px solid #818182 !important;
+}
+
+.floating-input-dark:focus{
+    border-bottom: 1px solid #1b1e21 !important;
 }
