--- a/floating.labels.css
+++ b/floating.labels.css
@@ -1,3 +1,6 @@
+.floating-control-group {
+    position: relative;
+}
 .floating-label {
     opacity: 0.7;
     -webkit-transition: all 200ms ease;
@@ -5,17 +8,29 @@
     -ms-transition: all 200ms ease;
     -o-transition: all 200ms ease;
     transition: all 200ms ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-top: .375rem;
+    padding-left: .75rem;
+}
+
+.fl-lg {
+    padding-top: .875rem;
+    padding-left: .75rem;
+}
+
+.fl-sm {
+    padding-top: .25rem;
+    padding-left: .5rem;
 }
 
 .floating-label-on {
     font-size: 0.75rem;
     opacity: 1;
+    padding: 0;
+    top: 5px;
     transform: translate3d(0, -100%, 0);
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
-    transition: all 200ms ease;
 }
 
 .floating-label-primary {
